--- a/src/components/cards/projectCard/projectCard.css
+++ b/src/components/cards/projectCard/projectCard.css
@@ -1,19 +1,73 @@
-.project__card {
-    margin: 30px 10px;
-    border: 1px solid black;
-    border-radius: 10px;;
+.project-image {
+    width: 100%;
+    height: auto;
+    /* width: 250px; */
 }
 
-.project__card >* {
-padding : 20px;
+.card-title {
+    color: #000000;
+    font-size: 22px;
+    line-height: 24px;
+    font-weight: 700;
+    margin: 15px 0 0 0;
 }
 
-img{
-    max-width: 100%;
+.card-subtitle {
+    color: #666666;
+    font-size: 17px;
+    line-height: 1.5rem;
 }
 
-.card__footer{
-    display : flex;
-    justify-content: space-around;
-   text-align: center;
+.project-card {
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 30px -15px;
+    border-radius: 10px;
+    border: 1px solid rgba(211, 211, 211, 0.397);
 }
+
+.project-detail-div {
+    text-align: center;
+    padding: 1.5rem;
+    }
+
+    .project-card:hover {
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px -10px;
+    }
+
+    .project-image-div {
+        position: relative;
+        height: 250px;
+        overflow: hidden;
+        text-align: center;
+    }
+
+    .project-card-footer {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 1.5rem;
+    }
+    
+    .project-tag {
+        padding-left: 0;
+        list-style: none;
+        font-size: 1.5rem;
+        margin-bottom: 0px;
+        margin-top: 0px;
+        text-align: center;
+    }
+    .project-card-footer .link-list {
+       
+        display: inline-block;
+        margin-right: 30px;
+        margin-bottom: 20px;
+    }
+
+    .icon-link {
+        color: #000000;
+    }
+    
+    .icon-link:hover {
+        color: #645beb;
+    }
