--- a/src/components/socialMedia/SocialMedia.css
+++ b/src/components/socialMedia/SocialMedia.css
@@ -7,17 +7,18 @@
   }
 
   .icon-button .icons {
+    padding : 10px;
     color: white;
     border-radius: 2.6rem;
     cursor: pointer;
     display: inline-block;
-    font-size: 1.3rem;
-    height: 2.6rem;
-    line-height: 2.6rem;
+    font-size: 1rem;
+    height: 2rem;
+    line-height: 2rem;
     margin: 0 10px;
     position: relative;
     text-align: center;
-    width: 2.6rem;
+    width: 2rem;
   margin-bottom: 10px;
   transition: 0.2s ease-in;
   }
