--- a/src/containers/Achievements/Achievements.css
+++ b/src/containers/Achievements/Achievements.css
@@ -13,7 +13,7 @@
   }
   .achievement-subtitle {
     text-transform: uppercase;
-    margin: 0px;
+    margin-top: 16px;
     margin-bottom: 50px;
   }
 
