--- a/src/containers/Skills/Skills.css
+++ b/src/containers/Skills/Skills.css
@@ -5,7 +5,7 @@
    padding-top : 2rem;
  }
 .skills-text-div {
-  margin-left: 50px;
+  margin-left: 40px;
   
 }
 
@@ -14,12 +14,16 @@
     margin-bottom: 30px;
 }
 
+.skills-image-div {
+  padding : 10px;
+}
 .skills-image-div > img {
     max-width: 100%;
     height: auto;
-    padding: 5% 2%;
-    margin-left : 10px;
-    margin-right: 10px;
+   margin: auto;
+    /* padding: 5% 0; */
+    /* margin-left : 10px;
+    margin-right: 10px; */
   }
 
   .skills-heading {
@@ -49,7 +53,7 @@
         text-align: center;
       }
       .skills-image-div {
-        /* display: none; */
+        
         order: 2;
       }
   }
