--- a/src/containers/Projects/Projects.css
+++ b/src/containers/Projects/Projects.css
@@ -13,7 +13,7 @@
     }
     .project-subtitle {
       text-transform: uppercase;
-      margin: 0px;
+      margin-top: 16px;
       margin-bottom: 50px;
     }
   
