--- a/src/components/SoftwareSkills/SoftwareSkills.css
+++ b/src/components/SoftwareSkills/SoftwareSkills.css
@@ -1,6 +1,6 @@
 @import url("https://use.fontawesome.com/33ac4851f0.js");
 .dev-items {
-    padding-left: 0;
+    /* padding-left: 0; */
   list-style: none;
   font-size: 3rem;
   margin-bottom: 0px;
