--- a/src/containers/Contact/Contact.css
+++ b/src/containers/Contact/Contact.css
@@ -1,12 +1,13 @@
 .contact-title{
-    font-size: 65px;
+    font-size: 56px;
     font-weight: 400;
+    text-align: center;
 }
 
 .contact-detail,
 .contact-detail-email {
     margin-top: 20px;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 400;
     color: #868e96;
     text-decoration: none;
@@ -21,10 +22,12 @@
 
 .contact-subtitle {
     text-transform: uppercase;
+    text-align: center;
 }
 
 .contact-text-div {
     margin-top: 1.5rem;
+    text-align: center;
 }
 
 .contact-margin-top {
@@ -32,11 +35,11 @@
 }
 
 @media (max-width: 1380px), (max-width: 768px) {
-    .contact-title {
+    /* .contact-title {
         font-size: 56px;
         font-weight: 400;
         text-align: center;
-    }
+    } */
 
     .contact-title {
         font-size: 40px;
