--- a/src/containers/Summary/Summary.css
+++ b/src/containers/Summary/Summary.css
@@ -1,9 +1,8 @@
 .greet-main {
     width : 90%;
     padding : 20px 10px;
-    margin : 0px auto;
-    margin-top : 2rem;
-  
+    margin : 2rem auto;
+    margin-top: 4rem;
 
 }
 .greeting-main {
@@ -17,7 +16,7 @@
 .greeting-text-p {
     font-size: 30px;
     line-height: 40px;
-    color: 
+    color: #868e96;
   }
 
   .greeting-image-div > img {
@@ -74,6 +73,10 @@
   }
 
   @media (max-width: 768px) {
+    .greet-main {
+      margin-top: 2rem;
+  }
+
     .button-greeting-div {
       justify-content: space-between;
     }
