--- a/src/components/cards/ExperienceCard/ExperienceCard.css
+++ b/src/components/cards/ExperienceCard/ExperienceCard.css
@@ -109,8 +109,14 @@
     padding: 1.5rem;
     margin-top: 2rem;
 }
-/* 
-media query */
+
+.experience-text-details .subTitle {
+    color: #666666;
+    font-size: 17px;
+    line-height: 1.5rem;
+    margin-bottom: 5px;
+}
+/* media query */
 
 @media (max-width: 1380px)
 {
@@ -136,5 +142,6 @@ media query */
     .experience-text-desc {
         font-size: 16px;
     }
+
 }
 
