--- a/src/components/socialMedia/SocialMedia.css
+++ b/src/components/socialMedia/SocialMedia.css
@@ -13,13 +13,12 @@
     cursor: pointer;
     display: inline-block;
     font-size: 1rem;
-    height: 2rem;
+    height: 1.5rem;
     line-height: 2rem;
-    margin: 0 10px;
+    margin: 0 5px 10px;
     position: relative;
     text-align: center;
-    width: 2rem;
-  margin-bottom: 10px;
+    width: 1.5rem;
   transition: 0.2s ease-in;
   }
 
